@@ -237,6 +237,41 @@ sub build_exe_file {
   $self->link($object_files);
 }
 
+sub create_source_file {
+  my ($self, $opt) = @_;
+  
+  # Config
+  my $config = $self->config;
+  
+  my $input_file = $opt->{input_file};
+  my $output_file = $opt->{output_file};
+  my $create_cb = $opt->{create_cb};
+  
+  my $need_create;
+  if ($self->force) {
+    $need_create = 1;
+  }
+  elsif ($config->force) {
+    $need_create = 1;
+  }
+  else {
+    if (!-f $output_file) {
+      $need_create = 1;
+    }
+    else {
+      my $input_file_mtime = (stat($input_file))[9];
+      my $output_file_mtime = (stat($output_file))[9];
+      if ($input_file_mtime > $output_file_mtime) {
+        $need_create = 1;
+      }
+    }
+  }
+  
+  if ($need_create) {
+    $create_cb->();
+  }
+}
+
 sub compile_source_file {
   my ($self, $opt) = @_;
 
@@ -616,80 +651,55 @@ sub compile_spvm_core_sources {
 sub create_spvm_module_sources {
   my ($self) = @_;
   
+  # Builder
   my $builder = $self->builder;
-  
-  my $config = $self->config;
   
   # Compiled class names
   my $class_names = $builder->get_class_names;
   
   for my $class_name (@$class_names) {
-
-    my $perl_class_name = "SPVM::$class_name";
-
-    # This source is UTF-8 binary
-    my $module_source = $builder->get_module_source($class_name);
     
+    # Moudle file - Input
     my $module_file = $builder->get_module_file($class_name);
-
+    
+    # Source file - Outpu
     my $build_dir = $self->builder->build_dir;
     my $build_src_dir = $self->builder->create_build_src_path;
+    my $perl_class_name = "SPVM::$class_name";
     my $module_source_base = $perl_class_name;
     $module_source_base =~ s|::|/|g;
     my $module_source_csource_file = "$build_src_dir/$module_source_base.modsrc.c";
-
-    my $module_source_c_hex = $module_source;
     
-    # Escape to Hex C launguage string literal
-    $module_source_c_hex =~ s/(.)/$_ = sprintf("\\x%02X", ord($1));$_/ges;
-    
-    # native class name
-    my $class_cname = $class_name;
-    $class_cname =~ s/::/__/g;
+    # Create source file
+    $self->create_source_file({
+      input_file => $module_file,
+      output_file => $module_source_csource_file,
+      create_cb => sub {
+        # This source is UTF-8 binary
+        my $module_source = $builder->get_module_source($class_name);
+        my $module_source_c_hex = $module_source;
+        
+        # Escape to Hex C launguage string literal
+        $module_source_c_hex =~ s/(.)/$_ = sprintf("\\x%02X", ord($1));$_/ges;
+        
+        # native class name
+        my $class_cname = $class_name;
+        $class_cname =~ s/::/__/g;
 
-    my $get_module_source_csource = <<"EOS";
+        my $get_module_source_csource = <<"EOS";
 static const char* module_source = "$module_source_c_hex";
 const char* SPMODSRC__${class_cname}__get_module_source() {
   return module_source;
 }
 EOS
-
-    my $need_create;
-    if ($self->force) {
-      $need_create = 1;
-    }
-    elsif ($config->force) {
-      $need_create = 1;
-    }
-    else {
-      if (!-f $module_source_csource_file) {
-        $need_create = 1;
-      }
-      else {
-        my $module_file_mtime;
-        if (defined $module_file) {
-          $module_file_mtime = (stat($module_file))[9];
-        }
-        else {
-          $module_file_mtime = 0;
-        }
+        mkpath dirname $module_source_csource_file;
         
-        my $module_source_csource_file_mtime = (stat($module_source_csource_file))[9];
-        
-        if ($module_file_mtime > $module_source_csource_file_mtime) {
-          $need_create = 1;
-        }
-      }
-    }
-    
-    if ($need_create) {
-      mkpath dirname $module_source_csource_file;
-      
-      open my $module_source_csource_fh, '>', $module_source_csource_file
-        or die "Can't open file $module_source_csource_file:$!";
+        open my $module_source_csource_fh, '>', $module_source_csource_file
+          or die "Can't open file $module_source_csource_file:$!";
 
-      print $module_source_csource_fh $get_module_source_csource;
-    }
+        print $module_source_csource_fh $get_module_source_csource;
+      }
+    });
   }
 }
 
